:hammer: chore(client): init clint side

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UniDocs</title>
-    <script type="module" src="script.js"></script>
-    <link rel="stylesheet" href="">
+    <link rel="icon" type="image/x-icon" href="@@@@@@@@@@@@@@">
+  
+    <meta name="description"
+      content="UniDocs - Untite all your documents into the only application you will ever need, access them anytime, from anywhere.">
+    <meta name="keywords"
+      content="UniDocs, unify, documents, notes, work notes, documentation, cloudspace">
+    <meta name="author" content="UniDocs">
+    <meta name="theme-color" content="#D9D9D9">
+  
+    <meta property="og:title" content="UniDocs">
+    <meta property="og:description"
+      content="Unidocs - Your Comprehensive Documentation Solution. Streamline your documentation process with Unidocs, the user-friendly and feature-rich documentation app. Create, collaborate, and manage your documents effortlessly. Enhance productivity and ensure clarity with Unidocs. Start documenting your success today!">
+    <meta property="og:image"
+      content="@@@@@@@@@@@@@@@">
+    <meta property="og:url" content="@@@@@@@@@@@@@@@">
+    <meta name="og:site_name" content="UniDocs - Unify your work">
+    <meta property="og:type" content="website">
+  
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="UniDocs - Unify your work">
+    <meta name="twitter:description"
+      content="Simplifying Documentation. Your all-in-one solution for seamless document creation, collaboration, and management. Boost productivity with Unidocs – your key to organized and efficient documentation.">
+    <meta name="twitter:image"
+      content="@@@@@@@@@@@@@@@@@@@">
+    <meta name="twitter:site" content="@unidocs">
+  
+    <link rel="stylesheet" href="./src/css/style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;700&display=swap" rel="stylesheet">
+    <script type="module" src="./src/script/script.js"></script>
 </head>
 <body>
+
+    <nav id="navBar"></nav>
+
+    <main id="mainContainer"></main>
     
 </body>
 </html>
