--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,14 +31,18 @@
     <meta name="twitter:site" content="@unidocs">
   
     <link rel="stylesheet" href="./src/css/style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="node_modules/froala-editor/css/froala_editor.pkgd.min.css" rel="stylesheet" type="text/css" />
     <script type="module" src="./src/script/script.js"></script>
 </head>
 <body>
 
     <nav id="navBar"></nav>
 
-    <main id="mainContainer"></main>
-    
-</body>
+    <main id="mainContainer">
+      <!-- <textarea id="textContent"></textarea> -->
+    </main>
+    <script type="text/javascript" src="./node_modules/froala-editor/js/froala_editor.pkgd.min.js"></script>
+
+    <!-- <script src="./node_modules/tinymce/tinymce.min.js"></script> -->
+  </body>
 </html>
