🔧 chore(client): Tweak saveDoc feature

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,6 +42,9 @@
       <!-- <textarea id="textContent"></textarea> -->
     </main>
     <script type="text/javascript" src="./node_modules/froala-editor/js/froala_editor.pkgd.min.js"></script>
+    <script type="text/javascript" src="./node_modules/froala-editor/js/plugins/char_counter.min.js"></script>
+
+    <!-- <script type="text/javascript" src="./node_modules/froala-editor/js/plugins/colors.min.js"></script> -->
 
     <!-- <script src="./node_modules/tinymce/tinymce.min.js"></script> -->
   </body>
