--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,11 +32,12 @@
   
     <link rel="stylesheet" href="./src/css/style.css" />
     <link href="node_modules/froala-editor/css/froala_editor.pkgd.min.css" rel="stylesheet" type="text/css" />
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script type="module" src="./src/script/script.js"></script>
 </head>
 <body>
 
-    <nav id="navBar"></nav>
+    <nav id="navBar" class="navBar"></nav>
 
     <main id="mainContainer">
       <!-- <textarea id="textContent"></textarea> -->
