--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,53 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UniDocs</title>
-    <link rel="icon" type="image/x-icon" href="@@@@@@@@@@@@@@">
-  
-    <meta name="description"
-      content="UniDocs - Untite all your documents into the only application you will ever need, access them anytime, from anywhere.">
-    <meta name="keywords"
-      content="UniDocs, unify, documents, notes, work notes, documentation, cloudspace">
-    <meta name="author" content="UniDocs">
-    <meta name="theme-color" content="#D9D9D9">
-  
-    <meta property="og:title" content="UniDocs">
-    <meta property="og:description"
-      content="Unidocs - Your Comprehensive Documentation Solution. Streamline your documentation process with Unidocs, the user-friendly and feature-rich documentation app. Create, collaborate, and manage your documents effortlessly. Enhance productivity and ensure clarity with Unidocs. Start documenting your success today!">
-    <meta property="og:image"
-      content="@@@@@@@@@@@@@@@">
-    <meta property="og:url" content="@@@@@@@@@@@@@@@">
-    <meta name="og:site_name" content="UniDocs - Unify your work">
-    <meta property="og:type" content="website">
-  
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="UniDocs - Unify your work">
-    <meta name="twitter:description"
-      content="Simplifying Documentation. Your all-in-one solution for seamless document creation, collaboration, and management. Boost productivity with Unidocs – your key to organized and efficient documentation.">
-    <meta name="twitter:image"
-      content="@@@@@@@@@@@@@@@@@@@">
-    <meta name="twitter:site" content="@unidocs">
-  
-    <link rel="stylesheet" href="./src/css/style.css" />
-    <link href="node_modules/froala-editor/css/froala_editor.pkgd.min.css" rel="stylesheet" type="text/css" />
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <script type="module" src="./src/script/script.js"></script>
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>UniDocs</title>
+		<link rel="icon" type="image/x-icon" href="@@@@@@@@@@@@@@" />
 
-    <nav id="navBar" class="navBar"></nav>
+		<meta
+			name="description"
+			content="UniDocs - Untite all your documents into the only application you will ever need, access them anytime, from anywhere."
+		/>
+		<meta
+			name="keywords"
+			content="UniDocs, unify, documents, notes, work notes, documentation, cloudspace"
+		/>
+		<meta name="author" content="UniDocs" />
+		<meta name="theme-color" content="#D9D9D9" />
 
-    <main id="mainContainer">
-      <!-- <textarea id="textContent"></textarea> -->
-    </main>
-    <script type="text/javascript" src="./node_modules/froala-editor/js/froala_editor.pkgd.min.js"></script>
-    
-    <!-- <script type="text/javascript" src="./node_modules/froala-editor/js/plugins/char_counter.min.js"></script> -->
+		<meta property="og:title" content="UniDocs" />
+		<meta
+			property="og:description"
+			content="Unidocs - Your Comprehensive Documentation Solution. Streamline your documentation process with Unidocs, the user-friendly and feature-rich documentation app. Create, collaborate, and manage your documents effortlessly. Enhance productivity and ensure clarity with Unidocs. Start documenting your success today!"
+		/>
+		<meta property="og:image" content="@@@@@@@@@@@@@@@" />
+		<meta property="og:url" content="@@@@@@@@@@@@@@@" />
+		<meta name="og:site_name" content="UniDocs - Unify your work" />
+		<meta property="og:type" content="website" />
 
-    <!-- <script type="text/javascript" src="./node_modules/froala-editor/js/plugins/colors.min.js"></script> -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="UniDocs - Unify your work" />
+		<meta
+			name="twitter:description"
+			content="Simplifying Documentation. Your all-in-one solution for seamless document creation, collaboration, and management. Boost productivity with Unidocs – your key to organized and efficient documentation."
+		/>
+		<meta name="twitter:image" content="@@@@@@@@@@@@@@@@@@@" />
+		<meta name="twitter:site" content="@unidocs" />
 
-    <!-- <script src="./node_modules/tinymce/tinymce.min.js"></script> -->
-  </body>
+		<link rel="stylesheet" href="./src/css/style.css" />
+		<link
+			href="node_modules/froala-editor/css/froala_editor.pkgd.min.css"
+			rel="stylesheet"
+			type="text/css"
+		/>
+		<link
+			href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+			rel="stylesheet"
+		/>
+		<script type="module" src="./src/script/script.js"></script>
+	</head>
+	<body>
+		<nav id="navBar" class="navBar"></nav>
+
+		<main class="uniDoc">
+			<h1>UniDoc</h1>
+			<section id="mainContainer"></section>
+		</main>
+		<script
+			type="text/javascript"
+			src="./node_modules/froala-editor/js/froala_editor.pkgd.min.js"
+		></script>
+	</body>
 </html>
