🎨 style(client): Styling to the client

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,6 +36,10 @@
 		<meta name="twitter:image" content="@@@@@@@@@@@@@@@@@@@" />
 		<meta name="twitter:site" content="@unidocs" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+
 		<link rel="stylesheet" href="./src/css/style.css" />
 		<link
 			href="node_modules/froala-editor/css/froala_editor.pkgd.min.css"
@@ -53,7 +57,7 @@
 
 		<main class="uniDoc">
 			<h1>UniDoc</h1>
-			<section id="mainContainer"></section>
+			<section id="mainContainer" class="mainContainer"></section>
 		</main>
 		<script
 			type="text/javascript"
