--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,7 +55,7 @@
 		<nav id="navBar" class="navBar"></nav>
 
 		<main class="uniDoc">
-			<h1>UniDoc</h1>
+			<h1><img src="assets/logo/logo.png" width="50" height="50" alt="logo of UniDoc">UniDoc</h1>
 			<section id="mainContainer" class="mainContainer"></section>
 		</main>
 		<script
